--- a/index.html
+++ b/index.html
@@ -54,7 +54,42 @@
             </ul>
         </nav>
 
+        <!-- Slider start -->
         <section class="slider">
+        </section>
+
+        <!-- features sections -->
+        <section class="our-features">
+            <div class="container">
+                <h2 align="center" style="padding: 20px 0px;">Our Features</h2>
+                <div class="features">
+                <div class="card">
+                    <i class="fa fa-book"></i>
+                    <p class="card-title">Weekly Test</p>
+                    <p class="card-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis quod blanditiis voluptates architecto quisquam eos earum.</p>
+                </div>
+                <div class="card">
+                    <i class="fa fa-book"></i>
+                    <p class="card-title">24/7 Electricity</p>
+                    <p class="card-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis quod blanditiis voluptates architecto quisquam eos earum.</p>
+                </div>
+                <div class="card">
+                    <i class="fa fa-book"></i>
+                    <p class="card-title">A/c Classrooms</p>
+                    <p class="card-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis quod blanditiis voluptates architecto quisquam eos earum.</p>
+                </div>
+            </div>
+            </div>
+        </section>
+
+        <!-- Director section start -->
+        <section class="director">
+            <div class="container">
+                <img src="./img/director.png" alt="director">
+                <p class="director-name">Mr. Charli Pathak</p>
+                <p class="director-qyl">(PHD, MCA)</p>
+                <p class="director-about">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique sunt mollitia iure et! Nisi quas, distinctio perferendis dolore laborum cumque! Ipsam vel fuga deleniti soluta fugit, necessitatibus ratione tenetur reiciendis.</p>
+            </div>
         </section>
         
 
